--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         run: "nix flake check --all-systems --print-build-logs"
 
       - name: "Files respect Editorconfig configuration"
-        run: "nix develop --command editorconfig-checker"
+        run: "nix develop --command lint-editorconfig"
 
       - name: "Files respect treefmt format"
         run: |
@@ -56,7 +56,7 @@ jobs:
               --formatters yamlfmt
 
       - name: "Run go unit tests"
-        run: "nix develop --command go test -v -race -count=1 ./..."
+        run: "nix develop --command go test -v -race -count 100 -failfast -timeout 500s -shuffle on ./..."
 
       - name: "Lint Github Actions"
         run: "nix develop --command lint-ghaction"
